--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "pack build",
     "publish": "pack publish",
     "docz:dev": "docz dev",
-    "docz:build": "docz build"
+    "docz:build": "docz build",
+    "example-counter": "budo ./examples/cancellable-counter/index.tsx:build.js --dir ./examples/cancellable-counter --live"
   },
   "babel": {
     "presets": [
@@ -58,13 +59,19 @@
     "@types/jest": "24.0.11",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.0.8",
+    "budo": "^11.6.2",
     "docz": "1.0.4",
     "docz-theme-default": "1.0.4",
     "emotion-theming": "10.0.10",
     "jest": "24.7.1",
+    "react-redux": "^7.0.3",
     "redux": "4.0.1",
     "redux-saga": "0.16.0",
     "ts-jest": "24.0.2",
     "typescript": "3.4.5"
+  },
+  "resolutions": {
+    "@types/react": "16.8.14"
   }
 }
