--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "publish": "pack publish",
     "docz:dev": "docz dev",
     "docz:build": "docz build",
-    "example-counter": "budo ./examples/cancellable-counter/index.tsx:build.js --dir ./examples/cancellable-counter --live"
+    "example:cancellable-counter": "webpack-dev-server --config ./examples/cancellable-counter/webpack.config.js"
   },
   "babel": {
     "presets": [
@@ -60,7 +60,7 @@
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "^7.0.8",
-    "budo": "^11.6.2",
+    "awesome-typescript-loader": "^5.2.1",
     "docz": "1.0.4",
     "docz-theme-default": "1.0.4",
     "emotion-theming": "10.0.10",
@@ -68,8 +68,12 @@
     "react-redux": "^7.0.3",
     "redux": "4.0.1",
     "redux-saga": "0.16.0",
+    "source-map-loader": "^0.2.4",
     "ts-jest": "24.0.2",
-    "typescript": "3.4.5"
+    "typescript": "3.4.5",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   },
   "resolutions": {
     "@types/react": "16.8.14"
